--- a/codigo/pages/filmesFuturos.html
+++ b/codigo/pages/filmesFuturos.html
@@ -15,7 +15,7 @@
   <nav>
     <div class="row">
       <div class="col-md-1 pl-4 pt-4 pb-3 pr-0">
-        <a href="index.html">
+        <a href="home.html">
           <img src="../assets/images/icons/logo.png" style="width: 100%; height: 60%; background-color: #d9d9d9;"></img>
         </a>
       </div>
@@ -54,7 +54,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="d-flex">
-          <a class="" href="./index.html">
+          <a class="" href="./home.html">
             <img class="interative-icon img-fluid m-0 d-flex" src="../assets/images/icons/back.jpg" alt="back_icon">
           </a>
         </div>
