--- a/codigo/pages/movie.html
+++ b/codigo/pages/movie.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="d-flex">
-          <a class="" href="./index.html">
+          <a class="" href="./home.html">
             <img class="interative-icon img-fluid m-0 d-flex" src="../assets/images/icons/back.jpg" alt="back_icon">
           </a>
         </div>
