--- a/codigo/pages/filmesSugeridos.html
+++ b/codigo/pages/filmesSugeridos.html
@@ -18,7 +18,7 @@
       <nav class="col-12 pb-1">
           <div class="row">
               <div class="col-md-1 pl-4 pt-4 pb-3 pr-0 text-left">
-                  <a href="../pages/index.html">
+                  <a href="../pages/home.html">
                       <img src="../assets/images/icons/logo.png" style="width: 100%; height: 60%; background-color: #d9d9d9;" alt="Logo">
                   </a>
               </div>
