--- a/codigo/pages/minhaLista.html
+++ b/codigo/pages/minhaLista.html
@@ -14,7 +14,7 @@
     <nav>
         <div class="row">
           <div class="col-md-1 pl-4 pt-4 pb-3 pr-0">
-            <a href="index.html">
+            <a href="home.html">
               <img src="../assets/images/icons/logo.png" style="width: 100%; height: 60%; background-color: #d9d9d9;"></img>
             </a>
           </div>
